--- a/Week3Project/index.html
+++ b/Week3Project/index.html
@@ -16,17 +16,17 @@
 
 <body>
 
+    <!-- Navbar for all pages of the site -->
     <nav>
         <ul class="NavUL">
             <li class="NAVli"> Colin Reale </li>
-            <li class="NAVli"><a href="interests.html">Interests</a></li>
-            <li class="NAVli"><a href="Projects.html">Projects</a></li>
             <li class="NAVli"><a href="index.html">Home</a></li>
+            <li class="NAVli"><a href="interests.html">Interests</a></li>
+            <li class="NAVli"><a href="Projects.html">Projects</a></li>     
             <li><a href="https://instagram.com/colinjreale"><img class="img2" src="Instagram_icon.png.webp"
                 alt="Instagram Icon"></a></li>
             <li><a href="https://github.com/ColinReale"><img class="img3" src="Github.png" alt="Github Icon"></a></li>
         </ul>
-
     </nav>
 
     <h1 class="h1a">Colin Reale</h1>
@@ -35,21 +35,25 @@
     <figcaption><sub>
             <div class="sadface">(Not my dog)</div>
         </sub></figcaption>
-
+<div>
     <h2><del>Gigachad</del>Yottachad Coder</h2>
     <p>Born in Pittsburgh, PA, Colin moved in 1998 to Florida, which became his home. An avid musician, health advocate,
         sports enthusiast and dog lover, Colin enjoys any excuse to act goofy with good friends.</p>
+</div>    
+        
+<div>
     <h3>Career notes</h3>
+    
     <ul>
         <li>Colin spent the first six years of his professional career as an ICU nurse, serving during Hurricane Irma
             as well as throughout the Covid-19 pandemic. </li>
-        <li>After stepping away from bedside nursing in early 2021, Colin decided to reorient his career around his
+        <li>After stepping away from bedside nursing in mid-2021, Colin decided to reorient his career around his
             passion for the future and using technology to better humanity.</li>
         <li>A true Renaissance man, Colin has traveled to 18 countries and 40 US states, is fluent in Spanish (&
             learning Portuguese!), has fundraised over $60,000 for non-profit organizations, is BLS ACLS and PALS
             certified, competed in the 2008 Philadelphia Marathon and is training to become a Yoga instructor.</li>
     </ul>
-
+    </div>
 
 
 
