--- a/Week3Project/projects.html
+++ b/Week3Project/projects.html
@@ -5,6 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+  integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
   <title>Projects</title>
   
 </head>
@@ -12,21 +17,22 @@
   <nav>
     <ul class="NavUL">
         <li class="NAVli"> Colin Reale </li>
+        <li class="NAVli"><a href="index.html">Home</a></li>
         <li class="NAVli"><a href="interests.html">Interests</a></li>
         <li class="NAVli"><a href="Projects.html">Projects</a></li>
-        <li class="NAVli"><a href="index.html">Home</a></li>
         <li><a href="https://instagram.com/colinjreale"><img class="img2" src="Instagram_icon.png.webp"
             alt="Instagram Icon"></a></li>
         <li><a href="https://github.com/ColinReale"><img class="img3" src="Github.png" alt="Github Icon"></a></li>
     </ul>
 
 </nav>
-
+<header><h1 class="h1a">Links to Other Projects</h1></header>
+<h2>(please wait patiently for the coder to create more content, this is only his third week in the field)</h2>
   <div class="grid-wrapper">
-    <header><h1>Links to Other Projects</h1></header>
+    
     <aside>
-      <h2>Here is a link to my personal </h2>
-      <a href="https://github.com/ColinReale/My-Favorite-Recipe.git">Guacamole Recipe</a>
+      <h3>Here is a link to my personal </h3>
+      <a href="https://colinreale.github.io/My-Favorite-Recipe/">Guacamole Recipe</a>
     </aside>
     <article>
       <h3>Here is a link to my </h3>
