--- a/Week3Project/interests.html
+++ b/Week3Project/interests.html
@@ -32,7 +32,7 @@
   <div class="box-2"> Paddleboarding in the backwaters of the Gulf along the Southwest Florida coast </div>
   <div class="box-3"> Chatting over a drink with someone who is different than me </div>
 </div>
-<h2>(This top three is subject to change based on the whims of the coder)</h2>
+<h2>This top three is subject to change based on the whims of the coder</h2>
 </div>
 </body>
 </html>
