--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li class="NAVli"> Colin Reale </li>
             <li class="NAVli"><a href="index.html">Home</a></li>
             <li class="NAVli"><a href="interests.html">Interests</a></li>
-            <li class="NAVli"><a href="Projects.html">Projects</a></li>     
+            <li class="NAVli"><a href="projects.html">Projects</a></li>     
             <li><a href="https://instagram.com/colinjreale"><img class="img2" src="Instagram_icon.png.webp"
                 alt="Instagram Icon"></a></li>
             <li><a href="https://github.com/ColinReale"><img class="img3" src="Github.png" alt="Github Icon"></a></li>
